--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+body{
+    font-family: 'Bad Script', cursive;
+    margin: 0;
+}
+
+.main-header{
+    text-align: center;
+    padding: 1rem;
+    background-color: #FCD34D;
+    margin: auto;
+    margin-bottom: 3.5rem;
+}
+
+
+
 #text-enter {
 	display: block;
 	width: 80%;
