--- a/style.css
+++ b/style.css
@@ -1,34 +1,209 @@
-body{
-    font-family: 'Bad Script', cursive;
-    margin: 0;
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400&display=swap');
+
+:root {
+	--primary-color: #f2c94c;
+	--black: #333333;
+	--off-white: #f3f4f6;
 }
 
-.main-header{
-    text-align: center;
-    padding: 1rem;
-    background-color: #FCD34D;
-    margin: auto;
-    margin-bottom: 3.5rem;
+body {
+	font-family: 'Kalam', cursive;
+	margin: 0px;
 }
 
+hr {
+	margin: 2rem 0rem;
+}
 
+/* spaces */
+.padding-med {
+	padding: 2rem;
+}
 
-#text-enter {
+/* container */
+.container {
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
+.container-center {
+	max-width: 600px;
+	margin: auto;
+}
+
+/* Navigation */
+
+.navigation {
+	background-color: var(--primary-color);
+	/* color: white; */
+	padding: 1rem;
+	/* border-bottom-left-radius: 1rem; */
+}
+
+.navigation .nav-brand {
+	font-weight: light 300;
+	font-size: xx-large;
+	text-align: center;
+}
+
+.navigation .nav-pills {
+	text-align: right;
+}
+
+.navigation .link {
+	color: white;
+}
+
+.navigation .link-active {
+	font-weight: bold;
+}
+
+/* header */
+
+.hero {
+	padding: 2rem;
+	padding-top: 5rem;
+}
+
+.hero-img {
+	max-width: 350px;
 	display: block;
-	width: 80%;
-	height: 5rem;
 	margin: auto;
-	padding: 1rem;
 }
-#btn-translate {
-    margin: 1rem;
-    padding: 0.5rem;  
+
+.hero .hero-heading {
+	padding-top: 1rem;
+	color: var(--dark-gray);
+	text-align: center;
 }
-#output {
-	border: black solid 1px;
-	width: 80%;
-	height: 5rem;
+
+.hero .hero-heading .heading-intensified {
+	color: var(--primary-color);
+}
+
+hr {
+	margin: 2rem 0rem;
+}
+
+/* spaces */
+.padding-med {
+	padding: 2rem;
+}
+
+/* container */
+.container {
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
+.container-center {
+	max-width: 600px;
 	margin: auto;
-    margin-top: 1rem;
+}
+
+/* Links */
+
+.link {
+	/* box-sizing: border-box; */
+	text-decoration: none;
+	padding: 0.5rem 1rem;
+	/* margin-top: 1rem;
+	margin-bottom: 1rem; */
+}
+.link-primary {
+	background-color: var(--primary-color);
+	border-radius: 0.5rem;
+	color: white;
+}
+
+.link-secondary {
+	color: var(--primary-color);
+	border-radius: 0.5rem;
+	border: 1px solid var(--primary-color);
+}
+
+/* Lists */
+
+.list-no-bullet {
+	list-style: none;
+}
+
+.list-item-inline {
+	display: inline;
+	padding: 0rem 0.5rem;
+}
+
+/* section */
+.section {
+	padding: 2rem;
+}
+
+.section h1 {
+	text-align: center;
+}
+
+.ow {
+	background-color: var(--off-white);
+}
+
+.footer {
+	display: block;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	background-color: var(--primary-color);
 	padding: 1rem;
+	text-align: center;
+	color: var(--black);
+	/* border-top-right-radius: 1rem; */
+}
+
+.footer .link {
+	color: white;
+}
+
+.footer .footer-header {
+	font-size: x-large;
+	color: var(--black);
+}
+
+.footer ul {
+	padding-inline-start: 0px;
+}
+
+.input-area {
+	min-height: 20vh;
+	box-sizing: border-box;
+	display: block;
+	width: 100%;
+	font-family: inherit;
+	font-size: large;
+	border-radius: 3px;
+}
+.btn {
+	border: none;
+	background-color: var(--primary-color);
+	height: 3.5rem;
+	width: 35%;
+	margin-top: 1rem;
+	font-family: inherit;
+	font-size: 1.1rem;
+	border-radius: 3px;
+}
+
+.trText {
+	margin-top: 1rem;
+}
+.op {
+	box-sizing: border-box;
+	border: 1px solid var(--black);
+	border-radius: 2px;
+	height: 5rem;
+	width: 100%;
+	min-height: 10vh;
+	max-height: 20vh;
+	overflow: scroll;
+}
+
+footer p{
+	max-width: 600px;
+	margin: auto;
 }
